--- a/QuanLyThongTinDaoTao/Views/Courses/DanhSachLopHoc.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Courses/DanhSachLopHoc.cshtml
@@ -79,7 +79,7 @@
                         }
                         else
                         {
-                            <div class="alert alert-info">Không có tệp đính kèm</div>
+                            <div class="alert alert-info">Không có tài liệu</div>
                         }
                     </div>
                 </div>
