--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/DiemDanhGiangVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/DiemDanhGiangVien/Index.cshtml
@@ -77,7 +77,7 @@
 
                     foreach (var gv in buoiHoc.GiangVien_BuoiHocs)
                     {
-                        var diemDanh = diemDanhs?.FirstOrDefault(d => d.BuoiHocId == buoiHoc.BuoiHocId && d.NguoiDungId == gv.NguoiDungId);
+                        var diemDanh = diemDanhs?.FirstOrDefault(d => d.BuoiHocId == buoiHoc.BuoiHocId && d.AppUserId == gv.AppUserId);
 
                         <tr>
                             @if (firstRow)
@@ -101,7 +101,7 @@
                             <td width="200px">
                                 <select class="form-control trang-thai-diem-danh"
                                         data-buoihoc-id="@buoiHoc.BuoiHocId"
-                                        data-giangvien-id="@gv.NguoiDungId">
+                                        data-giangvien-id="@gv.AppUserId">
                                     <option value="-1" class="text-center" @(diemDanh == null ? "selected" : "")>Chưa điểm danh</option>
                                     <option value="0" class="text-center" @(diemDanh?.TrangThai == DiemDanh_GV.TrangThaiDiemDanhGV.CoMat ? "selected" : "")>Có mặt</option>
                                     <option value="1" class="text-center" @(diemDanh?.TrangThai == DiemDanh_GV.TrangThaiDiemDanhGV.VangCoPhep ? "selected" : "")>Vắng có phép</option>
@@ -134,7 +134,7 @@
                 if (trangThai == -1) return;
                 danhSachDiemDanh.push({
                     BuoiHocId: buoiHocId,
-                    NguoiDungId: giangvienId,
+                    AppUserId: giangvienId,
                     TrangThai: trangThai
                 });
             });
@@ -153,7 +153,7 @@
                     if (res.success) {
                         alert(res.message || "Lưu điểm danh thành công!");
                         res.updatedAttendance.forEach(function (att) {
-                            var dropdown = $('select[data-giangvien-id="' + att.NguoiDungId + '"][data-buoihoc-id="' + att.BuoiHocId + '"]');
+                            var dropdown = $('select[data-giangvien-id="' + att.AppUserId + '"][data-buoihoc-id="' + att.BuoiHocId + '"]');
                             dropdown.val(att.TrangThai);
                         });
                     } else {
