--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
@@ -43,14 +43,11 @@
                                 <td>@item.ChuyenMon</td>
                                 <td>@item.HocHam</td>
                                 <td>
-                                    <!-- Các nút hành động đẹp hơn -->
-                                    @*<a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm m-2">
-                                        <i class="fas fa-eye"></i> Xem
-                                    </a>*@
-                                    <a href="@Url.Action("Edit", new { id = item.NguoiDungId })" class="btn btn-warning btn-sm m-2">
+                                  
+                                    <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-warning btn-sm m-2">
                                         <i class="fas fa-edit"></i> Chỉnh Sửa
                                     </a>
-                                    <a href="@Url.Action("Delete", new { id = item.NguoiDungId })" class="btn btn-danger btn-sm m-2" onclick="return confirm('Bạn có chắc chắn muốn xóa người dùng này?');">
+                                    <a href="@Url.Action("Delete", new { id = item.Id })" class="btn btn-danger btn-sm m-2" onclick="return confirm('Bạn có chắc chắn muốn xóa người dùng này?');">
                                         <i class="fas fa-trash-alt"></i> Xóa
                                     </a>
 
