--- a/QuanLyThongTinDaoTao/Views/Courses/Register.cshtml
+++ b/QuanLyThongTinDaoTao/Views/Courses/Register.cshtml
@@ -102,7 +102,8 @@
                 NgaySinh: $('#NgaySinh').val(),
                 SoDienThoai: $('#SoDienThoai').val(),
                 CoQuanLamViec: $('#CoQuanLamViec').val(),
-                LopHocId: $('#LopHocId').val()
+                LopHocIds: $('#SelectedLopHocIds').val().split(',')
+
             };
 
             $.ajax({
@@ -125,7 +126,7 @@
         // Xác nhận OTP
         $('#verifyOtpBtn').click(function () {
             const data = {
-                Email: $('#otpEmail').val(),
+                Email: $('#otpEmail').val().trim(),
                 Otp: $('#Otp').val()
             };
 
