--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Details.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/KhoaHoc/Details.cshtml
@@ -112,8 +112,8 @@
                 <div class="col-md-7">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-primary"><i class="fa-solid fa-list"></i> Danh Sách Lớp Học</h4>
-                        <a href="@Url.Action("Create", "LopHoc", new { KhoaHocId = ViewBag.KhoaHocId })" class="btn btn-primary">
-                            <i class="fa-solid fa-plus"></i> Thêm Lớp Học
+                        <a href="@Url.Action("Create", "LopHoc", new { khoaHocId = Model.KhoaHocId })" class="btn btn-primary">
+                            Thêm lớp học mới
                         </a>
                     </div>
 
