--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -95,7 +95,7 @@
                                 <i class="fa fa-tachometer-alt me-2"></i>Trang chủ
                             </a>
                             <a href="@Url.Action("Index", "KhoaHoc")" class="nav-item nav-link">
-                                <i class="fa fa-laptop me-2"></i>Khóa Học
+                                <i class="fa-solid fa-graduation-cap me-2"></i>Khóa Học
                             </a>
                             <a href="@Url.Action("Index", "LopHoc")" class="nav-item nav-link">
                                 <i class="fa fa-th me-2"></i>Lớp Học
